fix search form wrap style

--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,7 @@ body {
   content: "\f002";
 }
 #search-form-wrap {
+  display: none;
   position: absolute;
   top: 15px;
   width: 150px;
@@ -462,6 +463,7 @@ body {
   transition: 0.2s ease-out;
 }
 #search-form-wrap.on {
+  display: block;
   opacity: 1;
   right: 0;
 }
